# MCP_File_System

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  README.md  RELEASE_NOTES.md  pyproject.toml  verify_tool_docstrings.py
.github/workflows/: ci.yml  release.yml
install/: install.bat  install.sh  mcp_config_writer.py
servers/: __init__.py
servers/fs_basic/: __init__.py  _basic_archive.py  _basic_helpers.py  _basic_index.py  _basic_manage.py  _basic_query.py  _basic_read.py  _basic_write.py  engine.py  pyproject.toml  server.py
shared/: __init__.py  confirm_store.py  file_utils.py  patch_validator.py  platform_utils.py  progress.py  receipt.py  version_control.py
tests/: conftest.py  test_fs_basic.py  verify_tool_docstrings.py
tests/fixtures/messy/: café.txt  link_to_readme.txt
tests/fixtures/messy/sub1/: data.csv  notes.md
tests/fixtures/messy/sub1/sub2/: deep.py
tests/fixtures/messy/sub1/sub2/sub3/: buried.txt
tests/fixtures/simple/: file01.txt  file02.txt  file03.txt  file04.txt  file05.txt  file06.txt  file07.txt  file08.txt  file09.txt  file10.txt
