[project]
name = "mcp-filesystem"
version = "0.1.0"
description = "Unified File System MCP Server — shared utilities"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.uv.workspace]
members = ["servers/fs_basic"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "servers"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["shared", "servers"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["servers", "shared"]
extraPaths = ["servers/fs_basic", "."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "servers/fs_basic"]
